@@ -211,6 +211,7 @@ padding-character-clause:		obsolete # not verified yet
 section-segments:			ignore # not verified yet
 stop-literal-statement:			obsolete # not verified yet
 stop-identifier-statement:		unconformable
+stop-error-statement:			unconformable
 same-as-clause:				unconformable
 type-to-clause:				unconformable
 usage-type:					unconformable
