@@ -209,6 +209,7 @@ padding-character-clause:		ignore
 section-segments:			obsolete
 stop-literal-statement:			obsolete
 stop-identifier-statement:		unconformable
+stop-error-statement:			unconformable
 same-as-clause:				unconformable
 type-to-clause:				unconformable	# TYPEDEF is reserved but unused
 usage-type:					unconformable
