@@ -208,6 +208,7 @@ padding-character-clause:		obsolete
 section-segments:			unconformable
 stop-literal-statement:			unconformable
 stop-identifier-statement:		unconformable
+stop-error-statement:			unconformable
 same-as-clause:				ok
 type-to-clause:				ok
 usage-type:					unconformable
