@@ -209,6 +209,7 @@ padding-character-clause:		unconformable
 section-segments:			unconformable
 stop-literal-statement:			unconformable
 stop-identifier-statement:		unconformable
+stop-error-statement:			unconformable
 same-as-clause:				ok
 type-to-clause:				ok
 usage-type:					unconformable
