@@ -208,6 +208,7 @@ padding-character-clause:		ok
 section-segments:			obsolete
 stop-literal-statement:			obsolete
 stop-identifier-statement:		unconformable
+stop-error-statement:			ok
 same-as-clause:				unconformable
 type-to-clause:				unconformable
 usage-type:				unconformable
