@@ -207,6 +207,7 @@ padding-character-clause:		obsolete
 section-segments:			ignore
 stop-literal-statement:			obsolete
 stop-identifier-statement:		unconformable
+stop-error-statement:			unconformable
 same-as-clause:				unconformable
 type-to-clause:				unconformable
 usage-type:					unconformable
