@@ -211,6 +211,7 @@ padding-character-clause:		ignore
 section-segments:			unconformable
 stop-literal-statement:			ok
 stop-identifier-statement:		unconformable
+stop-error-statement:			unconformable
 same-as-clause:				unconformable
 type-to-clause:				unconformable
 usage-type:					unconformable
