@@ -213,6 +213,7 @@ padding-character-clause:		ok
 section-segments:			obsolete
 stop-literal-statement:			obsolete
 stop-identifier-statement:		ok
+stop-error-statement:			unconformable
 same-as-clause:				ok
 type-to-clause:				unconformable
 usage-type:					unconformable
