@@ -227,6 +227,7 @@ section-segments:			unconformable	# complete module removed
 # reportwriter and communication:  complete modules removed
 stop-literal-statement:			warning		# should not be used ...
 stop-identifier-statement:		unconformable
+stop-error-statement:			unconformable
 same-as-clause:				unconformable
 type-to-clause:				unconformable
 usage-type:					unconformable
